kubernetes/jobeinabox.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jobeinabox  
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jobeinabox
  template:
    metadata:
      labels:
        app: jobeinabox
    spec:
      containers:
      - name: jobeinabox
        image: calvincs.azurecr.io
	resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 512Mi
          ports:
            - containerPort: 80
              name: http
---
apiVersion: v1
kind: Service
metadata:
  name: jobeinabox
spec:
  type: ClusterIP
  ports: 80
  selector:
    app: jobeinabox
