kubernetes/jobeinabox-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jobe
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/use-regex: "true"
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - jobe.k8s.cs.calvin.edu
    secretName: tls-secret
  rules:
  - host: jobe.k8s.cs.calvin.edu
    http:
      paths:
      - path: /(.*)
        pathType: Prefix
        backend:
          service:
            name: jobeinabox
            port:
              number: 80
